fix mobile hero spacing

--- a/css/grid.css
+++ b/css/grid.css
@@ -172,6 +172,7 @@ section {
   flex-direction: row;
   /* justify-content: space-between; */
   align-items: center;
+	padding-bottom: 1rem;
 }
 
 .navbar .fixmenu {
@@ -387,13 +388,13 @@ ul#main-nav li {
   height: auto;
   margin-left: auto;
   margin-right: auto;
-  width: 14rem;
-  padding: 0 0 2rem 0;
+  width: 12rem;
+  padding: 0 0 0 0;
   /* width: 35%; */
 }
 
 .hero h1 {
-  padding: 5rem 0 0 0;
+  padding: 3rem 0 0 0;
 }
 
 .hero h2 {
@@ -1028,6 +1029,7 @@ span.circlenumber {
   grid-area: mylogo;
   }
 
+
   .work {
   grid-area:work;
   color: #fff;
@@ -1061,6 +1063,10 @@ span.circlenumber {
 
 	.hero {
 		padding-top: 20rem;
+	}
+
+	.hero img {
+		width: 14rem;
 	}
 
   .hero h1 {
